--- a/src/public/app/common.css
+++ b/src/public/app/common.css
@@ -1,10 +1,11 @@
 #navbar {
     position: sticky;
     top: 0px;
+    z-index: 1;
 }
 
 #footer {
-    padding-bottom: 0.5rem;
+    padding-bottom: 1.5rem;
     padding-top: 0.5rem;
     position: sticky;
     bottom: 0px;
@@ -13,5 +14,7 @@
 }
 
 #content {
-    height: 2000px;
+    display: flex;
+    min-height: 100vh;
+
 }
