--- a/src/public/components/allPosts.html
+++ b/src/public/components/allPosts.html
@@ -1,10 +1,13 @@
 <div class="container my-2">
     <h1 class="h1 text-center">Recent Posts</h1>
 
-    <div class="row">
-        <div class="col-4" id="posts-container">
+    <div class="row" id="posts-container">
 
-        </div>
     </div>
 
 </div>
+
+<script src="../app/allPosts.js"></script>
+<script>
+    loadPosts()
+</script>
