write post added

--- a/src/public/components/navbar.html
+++ b/src/public/components/navbar.html
@@ -11,10 +11,10 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Write</a>
+          <a class="nav-link" href="#" data-component="writePost">Write</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">My Posts</a>
+          <a class="nav-link" href="#" data-component="allPosts">My Posts</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -43,3 +43,5 @@
     </div>
   </div>
 </nav>
+
+<script src="../app/navbar.js"></script>
