--- a/src/public/components/navbar.html
+++ b/src/public/components/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">SocialApp</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -33,12 +33,12 @@
           <a class="nav-link disabled">Disabled</a>
         </li> -->
       </ul>
-      <form class="d-flex" role="search">
+      <!-- <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      </form> -->
       <div class="ml-auto px-2">
-        <span id="nav-username" class="text-secondary font-weight-bold">username</span>
+        <span id="nav-username" class="font-weight-bold">username</span>
       </div>
     </div>
   </div>
