--- a/src/public/components/navbar.html
+++ b/src/public/components/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">SocialApp</a>
+    <a class="navbar-brand" href="#">BlogApp</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -14,7 +14,7 @@
           <a class="nav-link" href="#" data-component="writePost">Write</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" data-component="myPosts">My Posts</a>
+          <a class="nav-link" href="#" data-component="myPosts">My Blogs</a>
         </li>
         <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
