--- a/src/public/components/writePost.html
+++ b/src/public/components/writePost.html
@@ -1,5 +1,5 @@
 <div class="container my-2">
-    <h1 class="h1 text-center">Write Post</h1>
+    <h1 class="h1 text-center">Write Blog</h1>
 
     <form>
         <div class="input-group flex-nowrap">
